--- a/src/main/resources/templates/auditWork/offsite/result.html
+++ b/src/main/resources/templates/auditWork/offsite/result.html
@@ -39,14 +39,14 @@
     </table>
     <a href="javascript:void(0)" class="easyui-linkbutton" style="background: #00aff0;height: 30px;" onclick="dialog1()">检查项目总结</a>
 </div>
-<div data-options="region:'center'">
-    <table class="easyui-datagrid" style="height: 100%">
+<div data-options="region:'center'" style="width: 100%">
+    <table class="easyui-datagrid" style="height: 100%;width: 100%">
         <thead>
         <tr>
-            <th data-options="field:'list'" width="420px;">客户信息</th>
-            <th data-options="field:'weifan'" width="420px;">违反词条</th>
-            <th data-options="field:'jisuan'" width="420px;">计算扣分</th>
-            <th data-options="field:'caozuo'" width="420px;">操作</th>
+            <th data-options="field:'list',width:'25%'" >客户信息</th>
+            <th data-options="field:'weifan',width:'25%'" >违反词条</th>
+            <th data-options="field:'jisuan',width:'25%'">计算扣分</th>
+            <th data-options="field:'caozuo',width:'25%'">操作</th>
         </tr>
         </thead>
         <tbody >
