--- a/src/main/resources/templates/auditWork/prorosalStage/roleAssign.html
+++ b/src/main/resources/templates/auditWork/prorosalStage/roleAssign.html
@@ -19,29 +19,28 @@
         项目批次时间：<input type="date"/> ———————— <input type="date"> <input type="submit" value="查询">
     </form>
     非现场阶段
-    <table class="easyui-datagrid" data-options="fitColumns:true" style="width: 600px;height: 300px;">
+    <table class="easyui-datagrid" data-options="fitColumns:true" style="width: 100%;height: 245px;">
         <thead>
         <tr>
-            <th data-options="field:'code',width:'15%'">项目名称</th>
-            <th data-options="field:'name',width:'15%'">被审计阶段</th>
-            <th data-options="field:'code',width:'16%'">主审</th>
+            <th data-options="field:'code',width:'16%'">项目名称</th>
+            <th data-options="field:'name',width:'16%'">被审计阶段</th>
+            <th data-options="field:'code',width:'17%'">主审</th>
             <th data-options="field:'code',width:'17%'">主审角色</th>
-            <th data-options="field:'code',width:'16%'">助审</th>
-            <th data-options="field:'code',width:'16%'">助审角色</th>
+            <th data-options="field:'code',width:'17%'">助审</th>
+            <th data-options="field:'code',width:'17%'">助审角色</th>
         </tr>
         </thead>
     </table><br><br>
-
     现场阶段
-    <table class="easyui-datagrid" data-options="fitColumns:true" style="width: 600px;height: 300px;">
+    <table class="easyui-datagrid" data-options="fitColumns:true" style="width: 100%;height: 245px;">
         <thead>
         <tr>
-            <th data-options="field:'code',width:'15%'">项目名称</th>
-            <th data-options="field:'name',width:'15%'">被审计阶段</th>
-            <th data-options="field:'code',width:'16%'">主审</th>
+            <th data-options="field:'code',width:'16%'">项目名称</th>
+            <th data-options="field:'name',width:'16%'">被审计阶段</th>
+            <th data-options="field:'code',width:'17%'">主审</th>
             <th data-options="field:'code',width:'17%'">主审角色</th>
-            <th data-options="field:'code',width:'16%'">助审</th>
-            <th data-options="field:'code',width:'16%'">助审角色</th>
+            <th data-options="field:'code',width:'17%'">助审</th>
+            <th data-options="field:'code',width:'17%'">助审角色</th>
         </tr>
         </thead>
     </table>
