--- a/src/main/resources/templates/auditManager/auditUserAdministration.html
+++ b/src/main/resources/templates/auditManager/auditUserAdministration.html
@@ -8,24 +8,111 @@
     <meta charset="UTF-8">
     <title>用户管理</title>
 </head>
-<body>
-<div class="easyui-layout" style="width: 100%;height: 800px;">
-    <div data-options="region:'center',title:'详细信息'" style="padding:5px;" >
+<style>
 
+</style>
+
+<script>
+    function addDialog() {
+        $("#win1").window('open');
+    }
+</script>
+<body>
+<div class="easyui-layout" style="width: 100%;height: 600px;">
+    <div data-options="region:'center',title:'详细信息'" >
+        <table class="easyui-datagrid" pagination="true" rownumbers="true" toolbar="#user" style="width:1163px;height:566px;">
+            <thead>
+            <th field="name1" width="150">用户id</th>
+            <th field="name2" width="150">姓名</th>
+            <th field="name3" width="150">角色</th>
+            <th field="name4" width="150">xxx</th>
+            <th field="name5" width="150">xxxx</th>
+            <th field="name6" width="150">状态</th>
+            <th field="name6" width="150">人员资质</th>
+            </thead>
+            <tbody>
+            <tr>
+                <td>xm</td>
+                <td>小明</td>
+                <td>审计人员</td>
+                <td>xxx</td>
+                <td>xxxx</td>
+                <td>正常</td>
+                <td>xxxxx</td>
+            </tr>
+            <tr>
+                <td>xh</td>
+                <td>小红</td>
+                <td>系统初始化角色</td>
+                <td>xxx</td>
+                <td>xxxx</td>
+                <td>正常</td>
+                <td>xxxxx</td>
+            </tr>
+            <tr>
+                <td>mogul</td>
+                <td>大佬</td>
+                <td>审计部总经理</td>
+                <td>xxx</td>
+                <td>xxxx</td>
+                <td>正常</td>
+                <td>xxxxx</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
+    <div id="win1" class="easyui-dialog" style="width:400px;padding: 20px;"
+         iconCls="icon-add" data-options="title:'增加用户',modal:true,closed:true">
+        <form id="" method="post" novalidate>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" label="用户id:" required="true" style="width:100%"></input>
+            </div>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" label="姓名:"  required="true" validType="email" style="width:100%"></input>
+            </div>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" label="部门:" required="true" style="width:100%"></input>
+            </div>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" label="岗位:" required="true" style="width:100%"></input>
+            </div>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" label="人员资质:" required="true" style="width:100%"></input>
+            </div>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" label="密码:" required="true" style="width:100%"></input>
+            </div>
+            <div style="text-align:right">
+                <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
+            </div>
+        </form>
+    </div>
+    <div id="user">
+        <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:addDialog()">增加</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:alert('删除')">删除</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-save" plain="true" onclick="javascript:alert('编辑')">编辑</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-save" plain="true" onclick="javascript:alert('设置角色')">设置角色</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-save" plain="true" onclick="javascript:alert('禁用|启用')">禁用|启用</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-save" plain="true" onclick="javascript:alert('重置密码')">重置密码</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-save" plain="true" onclick="javascript:alert('分配XX属性')">分配XX属性</a>
+        <input id="productid" style="line-height:26px;border:1px solid #ccc;text-align: center;" placeholder="输入关键字搜索">
+        <a href="javascript:void(0)" class="easyui-linkbutton" plain="true" onclick="">搜索</a>
+    </div>
+
     <div data-options="region:'west',title:'用户管理',split:true" style="width:230px;" >
         <div style="width: 100%;height: 20px;background: rgba(0, 0, 255, 0.1)">审计部门</div>
         <div id="tree">
             <ul class="easyui-tree">
                 <li>
-                    <span>审计部门</span>
+                    <span>XXX</span>
                     <ul>
                         <li>
-                            <span>稽核部</span>
+                            <span>XXXX</span>
                             <ul>
-                                <li><a href="javascript:void(0)"><span>XX部1子节点</span></a></li>
-                                <li><span>XX部1子节点</span></li>
-                                <li><span>XX部1子节点</span></li>
+                                <li><a href="javascript:void(0)"><span>XXXXXX</span></a></li>
+                                <li><span>XXXXX</span></li>
+                                <li><span>XXXXXX</span></li>
                             </ul>
                         </li>
                     </ul>
