--- a/src/main/resources/templates/auditManager/auditorManage.html
+++ b/src/main/resources/templates/auditManager/auditorManage.html
@@ -1,10 +1,103 @@
 <!DOCTYPE html>
+<html lang="en">
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>审计机构管理</title>
 </head>
-<body>
+<script>
+    function OpenDiv(){
+        document.getElementById("div1").style.display="block";
+    }
+    function addDialog() {
+        $("#win").window('open');
+    }
 
+    function addDialog1() {
+        $("#wi").window('open');
+    }
+
+    function ayo() {
+        $.messager.confirm('提示','确认删除吗?',function (r) {
+            if(r){
+                alert('想跳哪去自己写');
+            }
+        });
+    }
+</script>
+<body>
+<div id="ad" style="background: rgba(0, 0, 255, 0.1)">
+    <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:addDialog()">增加</a>
+    <a href="#" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:ayo()">删除</a>
+    <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="javascript:addDialog1()">编辑</a>
+    <a href="#" class="easyui-linkbutton" iconCls="icon-print" plain="true" onclick="javascript:a()">分配管理机构</a>
+</div>
+<div>
+    <table id="id1" class="easyui-datagrid" title="" style="width:100%;height: 370px;"  pagination="true" toolbar="#ad">
+        <thead>
+        <tr>
+            <th data-options="field:'itemid',width:550">名称</th>
+            <th data-options="field:'productid',width:550">代码</th>
+        </tr>
+        </thead>
+        <tbody id="tree">
+        <tr class="easyui-tree">
+        </tr>
+        </tbody>
+    </table>
+    <div id="win" class="easyui-dialog" style="width:400px;padding: 20px;"
+         iconCls="icon-add" data-options="title:'增加',modal:true,closed:true">
+        <form id="" method="post" novalidate>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" label="名称:" required="true" style="width:80%"></input>
+            </div>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" label="代码:" required="true" style="width:80%"></input>
+            </div>
+            <div style="text-align:right">
+                <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
+            </div>
+        </form>
+    </div>
+    <div id="wi" class="easyui-dialog" style="width:400px;padding: 20px;"
+         iconCls="icon-edit" data-options="title:'编辑',modal:true,closed:true">
+        <form id="" method="post" novalidate>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" label="名称:" required="true" style="width:80%"></input>
+            </div>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" label="代码:" required="true" style="width:80%"></input>
+            </div>
+            <div style="text-align:right">
+                <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <table id="datagrid" class="easyui-datagrid" title="" style="width:100%;height: 370px;"  pagination="true" oolbar="#d">
+        <thead>
+        <tr>
+            <th data-options="field:'itemid',width:550">名称</th>
+            <th data-options="field:'productid',width:550">代码</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+
+    </table>
+
+</div>
+<div id="d" style="background: rgba(0, 0, 255, 0.1)">
+    <a href="#" class="easyui-linkbutton" iconCls="icon-reload" plain="true" onclick="javascript:a()" style="position:relative;left:1000px;">刷新</a>
+</div>
 </body>
 </html>
