--- a/src/main/resources/templates/auditManager/index.html
+++ b/src/main/resources/templates/auditManager/index.html
@@ -2,11 +2,32 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>领导工作台</title>
-	<script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
-	<script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
+	<title>领导首页</title>
+	<link rel="stylesheet" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
+	<link rel="stylesheet" th:href="@{/vendor/font-awesome/css/font-awesome.min.css}">
+	<link rel="stylesheet" th:href="@{/vendor/linearicons/style.css}">
+	<link rel="stylesheet" th:href="@{/vendor/chartist/css/chartist-custom.css}">
+	<!-- MAIN CSS -->
+	<link rel="stylesheet" th:href="@{/css/main.css}">
+	<!-- FOR DEMO PURPOSES ONLY. You should remove this in your project -->
+	<link rel="stylesheet" th:href="@{/css/demo.css}">
+	<!-- GOOGLE FONTS -->
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
+	<!-- ICONS -->
+	<link rel="apple-touch-icon" sizes="76x76" th:href="@{/img/apple-icon.png}">
+	<link rel="icon" type="image/png" sizes="96x96" th:href="@{/img/favicon.png}">
+
 	<link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
+
+	<script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
+	<script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
+
+	<script th:src="@{/vendor/bootstrap/js/bootstrap.min.js}"></script>
+	<script th:src="@{/vendor/jquery-slimscroll/jquery.slimscroll.min.js}"></script>
+	<script th:src="@{/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js}"></script>
+	<script th:src="@{/vendor/chartist/js/chartist.min.js}"></script>
+	<script th:src="@{/scripts/klorofil-common.js}"></script>
 
 </head>
 <style>
@@ -29,87 +50,107 @@
     }
 </script>
 <body>
-<div id="cc" class="easyui-layout" style="width:100%;height:950px;">
-	<div data-options="region:'north',split:true" style="width: 100%;height: 100px;">
-
+<div id="cc" class="easyui-layout" style="width:100%;height:820px;">
+	<div data-options="region:'north',split:true" style="width: 100%;height: 80px;">
+		<nav class="navbar navbar-default navbar-fixed-top">
+			<div class="brand">
+				<a href="auditorindex"><img th:src="@{/img/logo-dark.png}" alt="首页" class="img-responsive logo"></a>
+			</div>
+			<div class="container-fluid">
+				<div id="navbar-menu">
+					<ul class="nav navbar-nav navbar-right">
+						<li>
+							<a href="#" class="notification-item"><span class="dot bg-danger"></span>修改信息</a>
+						</li>>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#" class="notification-item"><span class="dot bg-success"></span>查看个人信息</a></li>>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#" class="notification-item"><span class="dot bg-warning"></span>注销</a></li>>
+					</ul>
+				</div>
+			</div>
+		</nav>
 	</div>
-	<div data-options="region:'west',title:'领导的工作台',split:true" style="width:200px;">
-		<div class="easyui-accordion" style="width:100%;">
-			<div title="领导的工作台"  style="overflow:auto;padding:10px;">
-                      <ul>
-						  <li><a href="javascript:void(0)" onclick="addTab('待办事项','todolist')">待办事项</a></li>
-						  <li><a href="javascript:void(0)">计划项目进度</a></li>
-						  <li><a href="javascript:void(0)">人员任务总览</a></li>
-					  </ul>
+	<div data-options="region:'west',split:true" style="width:310px;background-color: black">
+		<div id="sidebar-nav" class="sidebar">
+			<div class="sidebar-scroll">
+				<nav>
+					<ul class="nav">
+						<li>
+							<a href="#subPages" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>领导工作台</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+							<div id="subPages" class="collapse ">
+								<ul class="nav">
+									<li><a href="javascript:void(0);" onclick="addTab('待办事项','todolist')" >待办事项</a></li>
+									<li><a href="javascript:void(0);" onclick="addTab('计划项目进度','approved')">计划项目进度</a></li>
+									<li><a href="javascript:void(0);" onclick="addTab('计划项目进度','message')">人员任务总览</a></li>
+								</ul>
+							</div>
+						</li>
+						<li>
+							<a href="#subPages1" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>立项阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+							<div id="subPages1" class="collapse ">
+								<ul class="nav">
+									<li><a href="javascript:void(0);" onclick="addTab('项目基本信息','proinfo')" >项目基本信息</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('角色分配','roleassign')">角色分配</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('任务分配','taskassign')">任务分配</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('审计方案','auditscheme')">审计方案</a></li>
+								</ul>
+							</div>
+						</li>
+						<li>
+							<a href="#subPages2" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>非现场检查阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+							<div id="subPages2" class="collapse ">
+								<ul class="nav">
+									<li><a href="javascript:void(0);" onclick="addTab('数据抽取','dataget')" >数据抽取</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('疑点库','doublelib')">疑点库</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('非现场检查结果','result')">非现场检查结果</a></li>
+								</ul>
+							</div>
+						</li>
+						<li>
+							<a href="#subPages3" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>现场检查阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+							<div id="subPages3" class="collapse ">
+								<ul class="nav">
+									<li><a href="javascript:void(0);" onclick="addTab('进场会','inmeeting')" >进场会</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('离场会议','outmetting')">离场会议</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('现场检查结果','insiteresult')">现场检查结果</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('稽核清单','list')">稽核清单</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('量化打分','score')">量化打分</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('风险矩阵','riskmatrix')">风险矩阵</a></li>
+								</ul>
+							</div>
+						</li>
+						<li>
+							<a href="#subPages4" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>结束阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+							<div id="subPages4" class="collapse ">
+								<ul class="nav">
+									<li><a href="javascript:void(0);" onclick="addTab('整改清单','changelist')" >整改清单</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('征求意见稿','fordraft')">征求意见稿</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('生成底稿','manuscript')">生成底稿</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('正式稿','officialdraft')">正式稿</a></li>
+									<li><a href="javascript:void(0)" onclick="addTab('项目归档','profile')">项目归档</a></li>
+								</ul>
+							</div>
+						</li>
+						<li><a href="notifications" onclick="addTab('审计机构管理','auditormanage')"><i class="lnr lnr-alarm"></i> <span>审计机构管理</span></a></li>
+						<li><a href="notifications" onclick="addTab('流程定义','processdefine')"><i class="lnr lnr-alarm"></i> <span>流程定义</span></a></li>
+						<li><a href="notifications" onclick="addTab('审计知识库管理','auditlib')"><i class="lnr lnr-alarm"></i> <span>审计知识库管理</span></a></li>
+						<li><a href="notifications" onclick="addTab('工作日志','worklog')"><i class="lnr lnr-alarm"></i> <span>工作日志</span></a></li>
+					</ul>
+				</nav>
 			</div>
-			<div title="被审单位管理" style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('被审计机构用户','manager')">被审单位管理</a></li>
-				</ul>
-			</div>
-			<div title="用户管理"  style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('用户管理','useradmin')">用户管理</a></li>
-				</ul>
-			</div>
-			<div title="角色管理"  style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('角色管理','')">角色管理</a></li>
-				</ul>
-			</div>
-			<div title="审计机构管理"  style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('审计机构管理','')">审计机构管理</a></li>
-				</ul>
-			</div>
-			<div title="属性管理" style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('属性管理','')">属性管理</a></li>
-				</ul>
-			</div>
-			<div title="属性设置"  style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('属性设置','')">属性设置</a></li>
-				</ul>
-			</div>
-			<div title="流程定义" style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('流程定义','processdefine')">流程定义</a></li>
-				</ul>
-			</div>
-			<div title="操作日志"  style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('操作日志','oplog')">操作日志</a></li>
-				</ul>
-			</div>
-			<div title="审计知识管理"  style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('审计知识管理','auditlib')">审计知识管理</a></li>
-				</ul>
-			</div>
-			<div title="工作日志"  style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('工作日志','worklog')">工作日志</a></li>
-				</ul>
-			</div>
-			<div title="项目类型"  style="overflow:auto;padding:10px;">
-				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('项目类型','protype')">项目类型</a></li>
-				</ul>
-			</div>
-
 		</div>
 	</div>
-	<div data-options="region:'center'" style="padding:5px;background:#eee;">
-		<div id="tabs" class="easyui-tabs" style="width: 100%;height:865px; "></div>
+	<div data-options="region:'center'" style="padding:0px;background:#eee;">
+		<div id="tabs" class="easyui-tabs" style="width: 100%;height:735px; "></div>
 	</div>
-	<div data-options="region:'south',title:'South Title',split:true" style="height:100px;">
 		<footer>
 			<div class="container-fluid">
 				<p class="copyright">Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
 			</div>
 		</footer>
-	</div>
 
 </div>
 
