--- a/src/main/resources/templates/auditManager/proType.html
+++ b/src/main/resources/templates/auditManager/proType.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>项目类型</title>
     <script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
