--- a/src/main/resources/templates/auditWork/insite/list.html
+++ b/src/main/resources/templates/auditWork/insite/list.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>稽核清单</title>
+    <script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
 </head>
 <body>
+<div style="margin: 0 auto;border: 1px solid red;width: 900px;">
+    <div style="margin-bottom:10px">
+        <input class="easyui-combo" label="稽核人员:" required="true" style="width:20%">
+        <input class="easyui-linkbutton" type="button" value="查询" style="width:80px;height:30px">
+        <input class="easyui-linkbutton" type="button" value="重置" style="width:80px;height:30px">
+        <input class="easyui-linkbutton" type="reset" value="导出" style="width:80px;height:30px">
+    </div>
+    <div>
+        <table border="1"  cellpadding="1" cellspacing="1" style="width: 100%">
+            <thead>
+            <tr style="background: #0ea0db">
+                <th rowspan="2">检查项</th>
+                <th colspan="2" align="center">数据类扣分</th>
+                <th rowspan="2">综合类扣分</th>
+                <th rowspan="2">问题</th>
+                <th rowspan="2">问题词条</th>
+                <th rowspan="2">问题名称</th>
+                <th rowspan="2">计算扣分</th>
+                <th rowspan="2">实际扣分</th>
+                <th rowspan="2">稽核人员</th>
+                <th rowspan="2">稽核时间</th>
+            </tr>
+            <tr style="background: #0ea0db">
+                <th>用户id</th>
+                <th>用户名称</th>
+            </tr>
+            </thead>
+            <tr>
 
+            </tr>
+        </table>
+    </div>
+</div>
 </body>
 </html>
