--- a/src/main/resources/templates/initialRoles/propertyManage.html
+++ b/src/main/resources/templates/initialRoles/propertyManage.html
@@ -2,9 +2,173 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>属性管理</title>
+    <script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
 </head>
+<style>
+    a{text-decoration: none}
+</style>
+
+<script>
+    function OpenDiv(){
+        document.getElementById("div1").style.display="block";
+    }
+
+    function addDialog() {
+        $("#win").window('open');
+    }
+
+    function addDialog1() {
+        $("#w").window('open');
+    }
+    function addDialog3() {
+        $("#wi").window('open');
+    }
+    function addDialog4() {
+        $("#n").window('open');
+    }
+    function ayo() {
+        $.messager.confirm('提示','确认删除吗?',function (r) {
+            if(r){
+                alert('想跳哪去自己写');
+            }
+        });
+    }
+    function EditUser() {
+        $('#fm').form('submit', {
+            url: "ajax/UserMAjax.ashx?cmd=edit&userid=" + userid,
+            success: function (data) {
+                var data = eval('(' + data + ')');  // change the JSON string to javascript object
+                if (data.rbool) {
+                    window.location.reload();
+                }
+                else {
+                    $.messager.alert('提示', data.infor);
+                }
+            }
+        });
+    }
+</script>
 <body>
 
+<div class="easyui-layout" style="width: 100%;height:800px;">
+    <div data-options="region:'west',title:'属性管理',split:true" style="width:280px;" >
+        <div style="width: 100%;">
+            <div id="d" style="background: rgba(0, 0, 255, 0.1)">
+                <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:addDialog()">增加</a>
+                <a href="#" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:ayo()">删除</a>
+                <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="javascript:addDialog4()">编辑</a>
+                <a href="#" class="easyui-linkbutton" iconCls="icon-reload" plain="true" onclick="">刷新</a>
+            </div>
+        </div>
+        <div style="width: 100%;height:30px;background: rgba(0, 0, 255, 0.1)">
+            <table id="dg" class="easyui-datagrid" title="" style="width:300%;height: 670px;" toolbar="#d">
+                <thead>
+                <tr>
+                    <th data-options="field:'itemid',width:90">属性名称</th>
+                    <th data-options="field:'productid',width:90">属性类型</th>
+                    <th data-options="field:'listprice',width:90,align:'right'">是否权限</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Data 1</td>
+                    <td>Data 2</td>
+                    <td>Data 3</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div id="win" class="easyui-dialog" style="width:400px;padding: 20px;"
+             iconCls="icon-add" data-options="title:'增加',modal:true,closed:true">
+            <form id="" method="post" novalidate>
+                <div style="margin-bottom:10px">
+                    <input class="easyui-textbox" label="属性名称:" required="true" style="width:100%"></input>
+                </div>
+                <div style="margin-bottom:10px">
+                    <input class="easyui-combo" label="属性类型:" required="true" style="width:100%"></input>
+                </div>
+                <div style="text-align:right">
+                    <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                    <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
+                </div>
+
+            </form>
+        </div>
+        <div id="n" class="easyui-dialog" style="width:400px;padding: 20px;"
+             iconCls="icon-edit" data-options="title:'编辑',modal:true,closed:true">
+            <form id="" method="post" novalidate>
+                <div style="margin-bottom:10px">
+                    <input class="easyui-textbox" label="属性名称:" required="true" style="width:100%"></input>
+                </div>
+                <div style="margin-bottom:10px">
+                    <input class="easyui-textbox" label="属性类型:" required="true" style="width:100%"></input>
+                </div>
+                <div style="margin-bottom:10px">
+                    <input class="easyui-combo" label="属性类型:" required="true" style="width:100%"></input>
+                </div>
+                <div style="text-align:right">
+                    <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                    <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
+                </div>
+
+            </form>
+        </div>
+    </div>
+    <div data-options="region:'center'" style="padding:5px;">
+        <div style="width: 100%;">
+            <div id="ad" style="background: rgba(0, 0, 255, 0.1)">
+                <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:addDialog3()">增加</a>
+                <a href="#" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:ayo()">删除</a>
+                <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="javascript:addDialog1()">编辑</a>
+                <a href="#" class="easyui-linkbutton" iconCls="icon-reload" plain="true" onclick="">刷新</a>
+            </div>
+        </div>
+        <div style="width: 100%;">
+            <table class="easyui-datagrid" pagination="true" rownumbers="true" style="width:95%;height:720px;" toolbar="#ad">
+                <thead>
+                <tr>
+                    <th field="ck" checkbox="true"></th>
+                    <th field="itemid" width="350">代码</th>
+                    <th field="productid" width="350">名称</th>
+                </tr>
+                </thead>
+            </table>
+        </div>
+        <div id="wi" class="easyui-dialog" style="width:400px;padding: 20px;"
+             iconCls="icon-add" data-options="title:'增加',modal:true,closed:true">
+            <form id="" method="post" novalidate>
+                <div style="margin-bottom:10px">
+                    <input class="easyui-textbox" label="代码:" required="true" style="width:100%"></input>
+                </div>
+                <div style="margin-bottom:10px">
+                    <input class="easyui-textbox" label="名称:"  required="true"  style="width:100%"></input>
+                </div>
+                <div style="text-align:right">
+                    <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                    <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
+                </div>
+            </form>
+        </div>
+        <div id="w" class="easyui-dialog" style="width:400px;padding: 20px;"
+             iconCls="icon-edit" data-options="title:'编辑',modal:true,closed:true">
+            <form id="" method="post" novalidate>
+                <div style="margin-bottom:10px">
+                    <input class="easyui-textbox" label="代码:" required="true" style="width:100%"></input>
+                </div>
+                <div style="margin-bottom:10px">
+                    <input class="easyui-textbox" label="名称:"  required="true"  style="width:100%"></input>
+                </div>
+                <div style="text-align:right">
+                    <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                    <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
