--- a/src/main/resources/templates/workbench/approved.html
+++ b/src/main/resources/templates/workbench/approved.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
     <script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
+    <meta charset="UTF-8">
+    <title>已审批事项</title>
 </head>
-<body>
-<div id="cc" class="easyui-layout" style="width:100%;height:100%;">
-    <div data-options="region:'center',title:'计划项目进度'" style="padding:5px;background:#eee;">
-        <table class="easyui-datagrid">
-            <thead>
-            <tr>
-                <th data-options="field:'code'">事项</th>
-                <th data-options="field:'name'">时间</th>
-                <th data-options="field:'price'">处理人</th>
-                <th data-options="field:'price'">处理操作</th>
-                <th data-options="field:'price'">处理意见</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>001</td><td>name1</td><td>2323</td><td>2323</td><td>2323</td>
-            </tr>
-            <tr>
-                <td>002</td><td>name2</td><td>4612</td><td>2323</td><td>2323</td>
-            </tr>
-            </tbody>
-        </table>
-
+<style>
+    a{text-decoration: none}
+</style>
+<body class="easyui-layout">
+<div data-options="region:'center'" style="height: 830px;">
+    <div id="plush" ba>
+        <span><a href="javascript:void(0)" class="easyui-linkbutton" plain="true" >刷新</a></span>
     </div>
+    <table class="easyui-datagrid" style="height:711px;">
+        <thead>
+        <tr>
+            <th data-options="field:'matter'" style="width:20%">事项</th>
+            <th data-options="field:'time'" style="width:20%">时间</th>
+            <th data-options="field:'chuliren'" style="width:20%">处理人</th>
+            <th data-options="field:'operation'" style="width:20%">处理操作</th>
+            <th data-options="field:'opinion'" style="width:20%">处理意见</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>项目立项审核</td>
+            <td>2017-03-06 09:10:05</td>
+            <td>启动用户</td>
+            <td>同意</td>
+            <td>无</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 </body>
