--- a/src/main/resources/templates/workbench/directory.html
+++ b/src/main/resources/templates/workbench/directory.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" th:href="@{/jquery-easyui-1.7.0/themes/default/easyui.css}">
-    <link rel="stylesheet" th:href="@{/jquery-easyui-1.7.0/themes/icon.css}">
-    <script th:src="@{/jquery-easyui-1.7.0/jquery.easyui.min.js}"></script>
+    <title>我的文件夹</title>
 </head>
 <body>
-<div id="cc" class="easyui-layout" style="width:100%;height:100%;">
-    <div data-options="region:'center',title:'center title'" style="padding:5px;background:#eee;">
-        <table class="easyui-datagrid">
-            <thead>
-            <tr>
-                <th data-options="field:'code'">文件名</th>
-                <th data-options="field:'name'">时间</th>
-                <th data-options="field:'price'">类型</th>
-                <th data-options="field:'price'">信息</th>
-                <th data-options="field:'price'">是否可用</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>001</td><td>name1</td><td>2323</td><td>2323</td><td>2323</td>
-            </tr>
-            <tr>
-                <td>002</td><td>name2</td><td>4612</td><td>2323</td><td>2323</td>
-            </tr>
-            </tbody>
-        </table>
-
-    </div>
+<div id="tool">
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:alert('上传')">上传</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:alert('下载')">下载</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:alert('删除')">删除</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:alert('刷新')">刷新</a>
+    <input id="productid" style="line-height:26px;border:1px solid #ccc;text-align: center;" placeholder="输入关键字搜索">
+    <a href="javascript:void(0)" class="easyui-linkbutton" plain="true" onclick="">搜索</a>
 </div>
+<table class="easyui-datagrid" toolbar="#tool" pagination="true" style="height:715px;">
+    <thead>
+    <tr>
+        <th data-options="field:'file'" style="width:20%">文件名</th>
+        <th data-options="field:'file'" style="width:20%">类型</th>
+        <th data-options="field:'file'" style="width:20%">时间</th>
+        <th data-options="field:'file'" style="width:20%">信息</th>
+        <th data-options="field:'file'" style="width:20%">是否可用</th>
+    </tr>
+    </thead>
+</table>
 </body>
 </html>
