--- a/src/main/resources/templates/workbench/message.html
+++ b/src/main/resources/templates/workbench/message.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" th:href="@{/jquery-easyui-1.7.0/themes/default/easyui.css}">
-    <link rel="stylesheet" th:href="@{/jquery-easyui-1.7.0/themes/icon.css}">
-    <script th:src="@{/jquery-easyui-1.7.0/jquery.easyui.min.js}"></script>
+    <title>我的消息</title>
 </head>
-<body>
-<div id="cc" class="easyui-layout" style="width:100%;height:100%;">
-
-    <div data-options="region:'center',title:'center title'" style="padding:5px;background:#eee;">
-        <table class="easyui-datagrid">
-            <thead>
-            <tr>
-                <th data-options="field:'code'">消息类型</th>
-                <th data-options="field:'name'">内容</th>
-                <th data-options="field:'price'">发送人</th>
-                <th data-options="field:'price'">发送时间</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>001</td><td>name1</td><td>2323</td><td>2323</td>
-            </tr>
-            <tr>
-                <td>002</td><td>name2</td><td>4612</td><td>2323</td>
-            </tr>
-            </tbody>
-        </table>
-
+<body class="easyui-layout">
+<div data-options="region:'center'" style="height: 100%;">
+    <div id="tool">
+        <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:alert('删除')">删除</a>
+        <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:alert('标记为已读')">标记为已读</a>
     </div>
+    <table class="easyui-datagrid" style="height:731px;" toolbar="#tool">
+        <thead>
+        <tr>
+            <th field="ck" checkbox="true" style="width: 5%;"></th>
+            <th data-options="field:'matter'" style="width:20%">消息类型</th>
+            <th data-options="field:'time'" style="width:35%">内容</th>
+            <th data-options="field:'chuliren'" style="width:20%">发送者</th>
+            <th data-options="field:'operation'" style="width:20%">发送时间</th>
+        </tr>
+        </thead>
+
+    </table>
 </div>
 </body>
 </html>
